@@ -11,7 +11,6 @@
 # FOR A PARTICULAR PURPOSE.
 #
 ##############################################################################
-import unittest
 from zope.testing import doctest
 
 def make_sure_gc_threshold_is_701_11_9():
